# codex-agent-sdk-python

./: .gitignore  MIGRATION.md  README.md  pyproject.toml
examples/: README.md  _common.py  agents.py  dynamic_tools.py  filesystem_agents.py  hooks.py  include_partial_messages.py  max_budget_usd.py  mcp_calculator.py  mcp_helpers.py  plugin_example.py  quick_start.py  resume_session.py  setting_sources.py  stderr_callback_example.py  streaming_mode.py  streaming_mode_ipython.py  streaming_mode_trio.py  system_prompt.py  tool_permission_callback.py  tools_option.py
examples/agents/: code-reviewer.md  doc-writer.md
examples/plugins/demo-plugin/commands/: greet.md
examples/prompts/: preset_style.md
src/codex_agent_sdk/: __init__.py  _errors.py  client.py  mcp.py  query.py  types.py
src/codex_agent_sdk/_internal/: __init__.py  app_server_client.py  client.py  message_parser.py  query.py  tool_schema.py
src/codex_agent_sdk/_internal/transport/: __init__.py  app_server.py  subprocess_cli.py
tests/: test_app_server_client.py  test_client_behavior.py  test_message_parser.py  test_query_api.py  test_tool_schema.py  test_transport.py
