[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-sdk-python"
version = "0.1.0"
description = "Python SDK for the Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [
  { name = "Codex SDK Contributors" }
]
dependencies = [
  "anyio>=4.0.0",
  "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.5.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Repository = "https://github.com/kongjiadongyuan/codex-agent-sdk-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_agent_sdk = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
